# parser-monad

./: README.md  pyproject.toml
resource/: example.fasta
src/example/: use_fasta.py
src/parser_monad/: __init__.py  basic_parser.py  either.py  fasta_parser.py  parser.py
